fix: gap between culture and work section (#66)

--- a/styles/includes/_slider.scss
+++ b/styles/includes/_slider.scss
@@ -1,4 +1,6 @@
 .slider {
+	@include spacing-800(margin-bottom);
+
 	position: relative;
 
 	&__heading {
